ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-versoview-ai
  namespace: versoview-ai-ns-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ai.dev.versoview.us
      secretName: versoview-ai-secret-tls
  rules:
    - host: ai.dev.versoview.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: versoview-ai-svc
                port:
                  number: 5000
